--- a/website/templates/createquestion.html
+++ b/website/templates/createquestion.html
@@ -16,6 +16,8 @@ body%}
     </select>
     <label for="question">question: </label>
     <input class="form-control" type="text" name="question" id="question" />
+    <label for="image">Image: </label>
+    <input class="form-control" type="file" name="image" id="image" />
     <div class="MCQ">
       <input
         class="form-control mt-2"
