SC idk i just want to sleep tried to stay up late but i messed it up because im stupid here goes my sleepig schedule

--- a/website/templates/createquestion.html
+++ b/website/templates/createquestion.html
@@ -6,7 +6,7 @@ body%}
     <select name="questiontype" class="form-select">
       <option value="TF">True Or False Question</option>
       <option value="MCQ">Multipule Choice Questions</option>
-      <option value="SQ">Single Choice Questions</option>
+      <option value="SQ" selected>Single Choice Questions</option>
     </select>
     <label for="subject">Subject: </label>
     <select class="form-select" name="subject" id="subject">
