--- a/website/templates/createquestion.html
+++ b/website/templates/createquestion.html
@@ -5,13 +5,17 @@ body%}
   <form action="/question/create" method="post" enctype="multipart/form-data">
     <select name="questiontype" class="form-select">
       <option value="TF">True Or False Question</option>
-      <option value="MCQ">Multipule Choice Questions</option>
-      <option value="SQ" selected>Single Choice Questions</option>
+      <option value="MCQ" selected>Multipule Choice Questions</option>
+      <option value="SQ">Single Choice Questions</option>
     </select>
     <label for="subject">Subject: </label>
     <select class="form-select" name="subject" id="subject">
       {%for subject in subjects%}
+      {% if subject.name == "English I'm Ashamed that this is even a thing but its tough times we live in"%}
+      <option selected value="{{subject.name}}">{{subject.name}}</option>
+      {%else%}
       <option value="{{subject.name}}">{{subject.name}}</option>
+      {%endif%}
       {%endfor%}
     </select>
     <label for="question">question: </label>
