this is the hardest exam i will be going to because i dont know shit about this subject hopefully it will go well im only making this commit as a tribute of i chose to kill myself after the exam then this will be my final message

--- a/website/templates/createquestion.html
+++ b/website/templates/createquestion.html
@@ -11,7 +11,7 @@ body%}
     <label for="subject">Subject: </label>
     <select class="form-select" name="subject" id="subject">
       {%for subject in subjects%}
-      {% if subject.name == "English I'm Ashamed that this is even a thing but its tough times we live in"%}
+      {% if subject.name == "Economy"%}
       <option selected value="{{subject.name}}">{{subject.name}}</option>
       {%else%}
       <option value="{{subject.name}}">{{subject.name}}</option>
