--- a/website/templates/createquestion.html
+++ b/website/templates/createquestion.html
@@ -4,14 +4,14 @@ body%}
 <div class="container">
   <form action="/question/create" method="post" enctype="multipart/form-data">
     <select name="questiontype" class="form-select">
-      <option value="TF">True Or False Question</option>
-      <option value="MCQ" selected>Multipule Choice Questions</option>
+      <option value="TF" selected>True Or False Question</option>
+      <option value="MCQ">Multipule Choice Questions</option>
       <option value="SQ">Single Choice Questions</option>
     </select>
     <label for="subject">Subject: </label>
     <select class="form-select" name="subject" id="subject">
       {%for subject in subjects%}
-      {% if subject.name == "Economy"%}
+      {% if subject.name == "IT"%}
       <option selected value="{{subject.name}}">{{subject.name}}</option>
       {%else%}
       <option value="{{subject.name}}">{{subject.name}}</option>
